# VIN_decoder_proj

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
VIN_decoder_proj/: asgi.py  settings.py  urls.py  wsgi.py
api/: urls.py
api/decoder/: serializers.py  urls.py  views.py
api/users/: serializers.py  views.py
decoder/: admin.py  exception.py  forms.py  functions.py  models.py  urls.py  utils.py  views.py
decoder/migrations/: 0001_initial.py  0002_alter_brand_code_alter_brand_name_alter_country_code_and_more.py  0002_alter_country_options_productionyear_year.py  0002_alter_model_model.py  0003_alter_brand_code_alter_country_code_alter_model_code_and_more.py  0003_brand_car_manufacturer_region_year_remove_mark_code_and_more.py  0004_alter_brand_name_alter_country_name_alter_model_name_and_more.py  0004_model.py  0005_rename_name_model_model_car_model.py
static/: 404_style.css  main.css
templates/: 404_page.html  dashboard.html  decode_vin_template.html  index.html  login.html  main.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  payment-failed.html  payment-success.html  payment.html  success_template.html
tests/: test_main.py
users/: admin.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
vin/: asgi.py  settings.py  urls.py  wsgi.py
